k8s-eks/06-monitoring/cloudwatch-exporter.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudwatch-exporter
  namespace: monitoring
  labels:
    app: cloudwatch-exporter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cloudwatch-exporter
  template:
    metadata:
      labels:
        app: cloudwatch-exporter
    spec:
      serviceAccountName: cloudwatch-exporter
      tolerations:
      - key: "node-type"
        operator: "Equal"
        value: "monitoring"
        effect: "NoSchedule"
      containers:
      - name: cloudwatch-exporter
        image: prom/cloudwatch-exporter:latest
        args:
          - "/etc/cloudwatch_exporter/config.yml"
          - "9106"
        ports:
        - containerPort: 9106
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 200m
            memory: 256Mi
        volumeMounts:
        - name: config-volume
          mountPath: /etc/cloudwatch_exporter
      volumes:
      - name: config-volume
        configMap:
          defaultMode: 420
          name: cloudwatch-exporter-config

---
apiVersion: v1
kind: Service
metadata:
  name: cloudwatch-exporter
  namespace: monitoring
  labels:
    app: cloudwatch-exporter
spec:
  selector:
    app: cloudwatch-exporter
  ports:
  - port: 9106
    targetPort: 9106
  type: ClusterIP
